[package]
name = "factory-valley-game"
version = "0.1.0"
edition = "2018"

include = [
    "./src/bin/**"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.14.0"
cgmath = "0.18.0"


[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false